2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* README: Updated documentation.
	* src/interface.c: Allowed interface file to load from either package
	data directory or build directory.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/links/email.c: Completely removed e-mail link type.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/storage-manager.c:
	* src/storage-manager.h: Added some basic statistics on the about
	dialogue.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/Makefile.am:
	* src/link.c:
	* src/links/note.c: Added "note" link type.
	* data/diary.ui:
	* src/main-window.c:
	* src/storage-manager.c: Various small fixes and UI improvements, as
	well as some improvements to the handling of empty entries.

2008-03-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/links/picasa.c: Removed Picasa link type --- use URIs instead.
	* .bzrignore:
	* src/Makefile.am:
	* src/link.c:
	* src/main-window.c: Made the link list more resilient to bad data.

2008-03-23  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Updated bzr ignore list.

2008-03-23  Philip Withnall  <philip@tecnocode.co.uk>

	* ChangeLog: Added ChangeLog.

2008-03-23  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Updated bzr ignore list.

2008-03-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c: Changed all C strings to en_US and added an
	en_GB translation.

2008-03-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main.c: Fix a small leak on quit caught with Valgrind.

2008-03-23  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* src/Makefile.am: Fixed test profiling in the Makefile.
	* src/interface.c:
	* src/link.c:
	* src/links/email.c:
	* src/links/file.c:
	* src/links/picasa.c:
	* src/links/uri.c:
	* src/main-window.c: Some comments moved to stop them showing up in
	the POT file unnecessarily.